flex wrap to fix chart

--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,7 @@ path { stroke-width: 3;fill: none;}
   height: 100vh;
   margin-top: 40px;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
 }
